--- a/doc/rmd_example/rmd_example.Rmd
+++ b/doc/rmd_example/rmd_example.Rmd
@@ -6,19 +6,22 @@ output:
     toc: true
     toc_float: true
     fig_caption: true
-    number_sections: false
+    number_sections: false 
   bookdown::pdf_document2:
     toc: true
     toc_float: true
     fig_caption: true
     number_sections: false
-  bibliography: references.bib  
+bibliography: references.bib  
 ---
 
-```{r}
-library(tidyverse)
+```{r, include = FALSE}
 knitr::opts_chunk$set(echo = FALSE,
-                      message = FALSE)
+                      message = FALSE,
+                      warning = FALSE,
+                      fig.align = 'center')
+
+library(tidyverse)
 ```
 
 # Aim
@@ -27,11 +30,11 @@ This project explores the historical population of horses in Canada between 1906
 
 # Data
 
-Horse population data were sourced from the [Government of Canada's Open Data website](http://open.canada.ca/en/open-data) (Government of Canada, 2017a and Government of Canada, 2017b).
+Horse population data were sourced from the [Government of Canada's Open Data website](http://open.canada.ca/en/open-data) [@horses1; @horses2].
 
 # Methods
 
-The R programming language (R Core Team, 2019) and the following R packages were used to perform the analysis: knitr (Xie 2014), tidyverse (Wickham 2017), and bookdown (Xie 2016). *Note: this report is adapted from (Timbers 2020).*
+The R programming language [@R] and the following R packages were used to perform the analysis: knitr [@knitr], tidyverse [@tidyverse], and bookdown [@bookdown]. *Note: this report is adapted from [@ttimbers-horses].*
 
 # Results
 
@@ -62,3 +65,4 @@ knitr::include_graphics("../../results/horse_pop_plot_largest_sd.png")
 In Figure \@ref(fig:horse-pop-max-sd) we zoom in and look at the province of `r largest_sd`, which had the largest spread of values in terms of standard deviation.
 
 # References
+
